--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@
     outline: none;
 }
 :root {
-    --bg-color: #151f28;
-    --main-color: #00abf0;
+    --bg-color: #52626a;
+    --main-color: #8b00a0;
     --text-color: #333;
     --second-text-color: #555;
     --white-color:#fff;
-    --cover-color:linear-gradient(45deg, #00abf0, #006e9a);
+    --cover-color:linear-gradient(45deg, #8b00a0, #8b00a0);
     --pages-color:linear-gradient(90deg, #fff, #ddd);
-    --border: 0.125rem solid #00abf0;
+    --border: 0.125rem solid #8b00a0;
     --box-shadow: 0 0 0.8rem rgba(0,0,0,0.2);
 
 }
@@ -27,7 +27,7 @@ body{
     min-height: 100vh; 
     background-color: var(--bg-color);
     color: var(--text-color);
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: "Nunito", sans-serif;
 }
 .wrapper{
@@ -55,8 +55,7 @@ body{
     left: 0;
     width: 50%;
     height: 100%;
-    background-color: var(--cover-color);
-    background-color: #029bca;
+    background-color:#4f1356;
     box-shadow: var(--box-shadow);
     border-top-left-radius: 0.6rem;
     border-bottom-left-radius: 0.6rem;
@@ -335,11 +334,12 @@ body{
     border: var(--border);
     border-radius: .3rem;
     font-weight: 600;
-    transition: .3 ease;
+    transition: .3s ease;
 }
-.skills-content .content span:hover{
-    box-shadow: var(--box-shadow);
+.skills-content .content span:hover {
+  transform: translateY(-2px);
 }
+
 .skills-content .content span i{
     color: var(--main-color);
     font-size: 2rem;
@@ -397,7 +397,8 @@ body{
     justify-content: center;
 }
 .portfolio-box .btn-box .btn{
-    margin: 0 1 .15rem;
+    margin: 0 1rem .15rem;
+
 }
 
 
@@ -466,4 +467,10 @@ body{
     opacity: 1;
     transform: translateX(-50%) scale(1);
     top: -1.8rem;
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    transform: scale(0.85);
+  }
 }
